<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/facultyNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faculty_name"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <Spinner
        android:id="@+id/subjectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/facultyNameText"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/dayEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_day"
        android:layout_below="@id/subjectSpinner"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/timeEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_time"
        android:layout_below="@id/dayEditText"
        android:layout_marginTop="8dp"/>

    <EditText
        android:id="@+id/roomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/room"
        android:layout_below="@id/timeEditText"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@id/roomEditText"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scheduleRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/saveButton"
        android:layout_marginTop="16dp"
        android:paddingTop="8dp"/>

</RelativeLayout>
