<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_material"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etCourseMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_course_material" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveCourseMaterial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>


    <TextView
        android:id="@+id/tvSavedCourseMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_course_material_will_appear_here"
        android:paddingTop="16dp"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/lvCourseMaterials"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingTop="8dp" />

</LinearLayout>
