<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/facultyNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/faculty_name1"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <Spinner
            android:id="@+id/subjectSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/dateEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date"
            android:inputType="date"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/date"/>

        <EditText
            android:id="@+id/timeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time"
            android:inputType="time"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/time"/>

        <EditText
            android:id="@+id/roomEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/room_number"
            android:importantForAccessibility="yes"
            android:contentDescription="@string/room_number"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_meeting"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="yes" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meetingsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
